<resources>
    <string name="app_name">FitnessPro</string>
    <string name="button_text">Press Me</string>
    <string name="lucky_button_text">Lucky dip</string>
    <string name="count_button_text">Count on me</string>
    <string name="placeholder">Enter something</string>
    <string name="default_text">Default text</string>
    <string name="percentage_default">0%</string>
    <string name="clock_button">What is the time?</string>
</resources>
