<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/button_text"
                android:onClick="buttonClick"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="172dp"
                android:layout_marginStart="172dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/extra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="50dp"
                android:inputType="textPersonName"
                android:text="@string/placeholder" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/something_button"
                android:text="@string/lucky_button_text"
                android:layout_gravity="center_horizontal"
                android:onClick="luckyButtonClick" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/count_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_text"
                android:gravity="center_horizontal"
                android:background="@color/colorAccent"/>
            <Button
                android:id="@+id/count_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_button_text"
                android:layout_below="@id/count_text" />
            <Button
                android:id="@+id/time_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/count_button"
                android:layout_below="@id/count_text"
                android:text="@string/clock_button"
                android:layout_marginLeft="10dp" />

            <fragment
                android:id="@+id/loading_fragment"
                android:name="com.cfbrownweb.chrisbrown.fitnesspro.LoadingFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/count_button" />
        </RelativeLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>